# indy-tx-fetcher

./: .gitignore  .gitmodules  Cargo.toml  README.md  ledgers.json
python-tests/: revoked.py  revoked_new.py  test.py
src/: main.rs
src/ledger/: ledger.rs  mod.rs  python.rs  transaction.rs
