[package]
name = "indy_ordering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indy-vdr = "0.3.4"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
reqwest = { version = "0.11.11" }
serde_json = {  version = "1.0", features = ["default"] }
serde = "1.0"
rocksdb = "0.19"
tokio = { version = "1.20.1", features = ["default", "rt-multi-thread"] }